19) kernel: ralink_wifi: set max mcast pkt`s in psq=16 (as mt7620 2.7.2.0 production drivers).<br>
20) kernel: ralink_wifi: convert all IrqFlags to ulong.<br>
21) kernel: ralink_wifi: fix throughput issue for some vendor AP with AES mode.<br>
22) kernel: ralink_wifi: fix default set MsduLifeTime at startup.<br>
23) kernel: ralink_wifi: fix set channel width in HT_CAP.<br>
24) kernel: ralink_wifi: fix potentional null pointer dereference in some case.<br>
25) kernel: ralink_wifi: do not disable HT protect if only one station connected to AP.<br>
26) kernel: ralink_wifi: in RT_802_11_MAC_ENTRY add Rx/TxBytes for read in UI.<br>
27) kernel: ralink_wifi: mt76x2: fix apcli phymode regression after 3.0.5.0 up.<br>
28) kernel: ralink_wifi: mt76x2: vgaclamp do not hardcode init value, read real value.<br>
29) kernel: ralink_wifi: mt76x2 update to 3.0.5.0_DPA_20160229 version.<br>
30) kernel: ralink_wifi: mt7603 set ring sizes for lab tested results.<br>
31) kernel: ralink_wifi: mt7603 fix proc path name.<br>
32) kernel: ralink_wifi: mt7603 fix set enq_done in drop path of rtmp_enq_req.<br>
33) kernel: ralink_wifi: backport some fixes from 3.0.5.0 and 4.1.0.0 drivers to stable tree versions.<br>
34) kernel: fix build with gcc5 (soft/hardfloat issue workaround).<br>
35) kernel: backport RTC_SYSTOHC from upstream.<br>
36) kernel: splice: handle zero nr_pages in splice_to_pipe().<br>
37) kernel: net: do not block BH while processing socket backlog.<br>
38) kernel: net: tcp: make tcp_sendmsg() aware of socket backlog.<br>
39) kernel: net: tcp: guarantee forward progress in tcp_sendmsg().<br>
40) kernel: net: ipv4: don't do expensive useless work during inetdev destroy.<br>
41) kernel: rcu: make rcu_is_cpu_rrupt_from_idle helper functions static.<br>
42) kernel: wait: allow sys_waitid() to accept __WNOTHREAD/__WCLONE/__WALL.<br>
43) kernel: sched: always inline context_switch().<br>
44) kernel: mips: make flush_thread and exit_thread always inline.<br>
<br>
<br>
<br>